RESOLVED FIXED270527
NEW TEST [ iOS Debug ] TestWebKitAPI.Fullscreen.ResizeEventOrder is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=270527
Summary NEW TEST [ iOS Debug ] TestWebKitAPI.Fullscreen.ResizeEventOrder is a constan...
Jay Stfleur
Reported 2024-03-05 10:28:57 PST
Description: TestWebKitAPI.Fullscreen.ResizeEventOrder Is a constant since introduced on debug History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.Fullscreen.ResizeEventOrder&style=debug Diff/Image Diff/Crash Log: ASSERTION FAILED: _overriddenLayoutParameters /Volumes/Data/worker/Apple-iOS-17-Simulator-Debug-Build/build/Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm(3747) : -[WKWebView(WKPrivateIOS) _maximumUnobscuredSizeOverride] 1 0x1173daa38 WTFCrash 2 0x2a474d8c0 std::__1::span<unsigned long long const, 18446744073709551615ul>::span[abi:v160006]<unsigned long long const*>(unsigned long long const*, unsigned long) 3 0x2a5e76908 -[WKWebView(WKPrivateIOS) _maximumUnobscuredSizeOverride] 4 0x2a6310864 WebKit::WKWebViewState::store(WKWebView*) 5 0x2a630ff5c -[WKFullScreenWindowController enterFullScreen:] 6 0x2a61f54e0 WebKit::PageClientImpl::enterFullScreen(WebCore::FloatSize) 7 0x2a6512cc4 WebKit::WebFullScreenManagerProxy::enterFullScreen(bool, WebKit::FullScreenMediaDetails&&) 8 0x2a76d46b4 auto void IPC::callMemberFunction<WebKit::WebFullScreenManagerProxy, WebKit::WebFullScreenManagerProxy, void (bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>>(WebKit::WebFullScreenManagerProxy*, void (WebKit::WebFullScreenManagerProxy::*)(bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>&&)::'lambda'(auto&&...)::operator()<bool, WebKit::FullScreenMediaDetails>(auto&&...) const 9 0x2a76d45d0 decltype(std::declval<WebKit::WebFullScreenManagerProxy>()(std::declval<bool>(), std::declval<WebKit::FullScreenMediaDetails>())) std::__1::__invoke[abi:v160006]<void IPC::callMemberFunction<WebKit::WebFullScreenManagerProxy, WebKit::WebFullScreenManagerProxy, void (bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>>(WebKit::WebFullScreenManagerProxy*, void (WebKit::WebFullScreenManagerProxy::*)(bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>&&)::'lambda'(auto&&...), bool, WebKit::FullScreenMediaDetails>(WebKit::WebFullScreenManagerProxy&&, bool&&, WebKit::FullScreenMediaDetails&&) 10 0x2a76d459c decltype(auto) std::__1::__apply_tuple_impl[abi:v160006]<void IPC::callMemberFunction<WebKit::WebFullScreenManagerProxy, WebKit::WebFullScreenManagerProxy, void (bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>>(WebKit::WebFullScreenManagerProxy*, void (WebKit::WebFullScreenManagerProxy::*)(bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>&&)::'lambda'(auto&&...), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>, 0ul, 1ul>(WebKit::WebFullScreenManagerProxy&&, WebKit::WebFullScreenManagerProxy&&, std::__1::__tuple_indices<0ul, 1ul>) 11 0x2a76d4550 decltype(auto) std::__1::apply[abi:v160006]<void IPC::callMemberFunction<WebKit::WebFullScreenManagerProxy, WebKit::WebFullScreenManagerProxy, void (bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>>(WebKit::WebFullScreenManagerProxy*, void (WebKit::WebFullScreenManagerProxy::*)(bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>&&)::'lambda'(auto&&...), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>>(WebKit::WebFullScreenManagerProxy&&, WebKit::WebFullScreenManagerProxy&&) 12 0x2a76d3790 void IPC::callMemberFunction<WebKit::WebFullScreenManagerProxy, WebKit::WebFullScreenManagerProxy, void (bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>>(WebKit::WebFullScreenManagerProxy*, void (WebKit::WebFullScreenManagerProxy::*)(bool, WebKit::FullScreenMediaDetails&&), std::__1::tuple<bool, WebKit::FullScreenMediaDetails>&&) 13 0x2a76d26c4 void IPC::handleMessage<Messages::WebFullScreenManagerProxy::EnterFullScreen, WebKit::WebFullScreenManagerProxy, WebKit::WebFullScreenManagerProxy, void (bool, WebKit::FullScreenMediaDetails&&)>(IPC::Connection&, IPC::Decoder&, WebKit::WebFullScreenManagerProxy*, void (WebKit::WebFullScreenManagerProxy::*)(bool, WebKit::FullScreenMediaDetails&&)) 14 0x2a76d2418 WebKit::WebFullScreenManagerProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 15 0x2a7e366ac IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 16 0x2a634cbb0 WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) 17 0x2a67708ac WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 18 0x2a7e0857c IPC::Connection::dispatchMessage(IPC::Decoder&) 19 0x2a7e089b4 IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 20 0x2a7e0906c IPC::Connection::dispatchIncomingMessages() 21 0x2a7e25e24 IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_15::operator()() const 22 0x2a7e25d80 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(WTF::UniqueRef<IPC::Decoder>)::$_15, void>::call() 23 0x117405218 WTF::Function<void ()>::operator()() const 24 0x1174a7038 WTF::RunLoop::performWork() 25 0x1174ab72c WTF::RunLoop::performWork(void*) 26 0x105b8569c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 27 0x105b855e4 __CFRunLoopDoSource0 28 0x105b84d54 __CFRunLoopDoSources0 29 0x105b7f43c __CFRunLoopRun 30 0x105b7ed28 CFRunLoopRunSpecific 31 0x110ebca98 -[NSRunLoop(NSRunLoop) runMode:beforeDate:]
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-05 10:29:43 PST
Jay Stfleur
Comment 2 2024-03-05 10:32:42 PST
Reproducibility: run-api-tests --root --ios-simulator --debug TestWebKitAPI.Fullscreen.ResizeEventOrder
Aditya Keerthi
Comment 3 2024-03-05 18:05:54 PST
EWS
Comment 4 2024-03-05 20:15:53 PST
Committed 275724@main (e936ac78d281): <https://commits.webkit.org/275724@main> Reviewed commits have been landed. Closing PR #25519 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.