NEW TEST [ iOS Debug ] TestWebKitAPI.Fullscreen.ResizeEventOrder is a constant crash https://bugs.webkit.org/show_bug.cgi?id=270527 rdar://124078618

Reviewed by Tim Horton.

Remove incorrect assertions.

In WebKit, `_minimumUnobscuredSizeOverride` and `_maximumUnobscuredSizeOverride`
are only read in fullscreen code, and the values are unused, unless
`_hasOverriddenLayoutParameters` is also true.

Furthermore, SPI clients are free to use these methods as they wish, in which
case the lack of overridden layout parameters is already gracefully handled.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _minimumLayoutSizeOverride]):
(-[WKWebView _minimumUnobscuredSizeOverride]):
(-[WKWebView _maximumUnobscuredSizeOverride]):

Canonical link: https://commits.webkit.org/275724@main